--- a/src/components/VrxIcon/VrxIcon.mdx
+++ b/src/components/VrxIcon/VrxIcon.mdx
@@ -4,7 +4,7 @@ import {Meta,  IconGallery, IconItem} from "@storybook/blocks";
 
 # VireoxIcon
 
-VVireoxIcon is the main component for working with icons.
+VireoxIcon is the main component for working with icons.
 
 It already includes some default icons, but you can also add new ones by using the SVG path. The included icons can be found in the [documentation](./?path=/docs/vrxicon--docs).
 
