add checked value inside onCheckNode emit

--- a/src/components/VrxTree/VrxTree.mdx
+++ b/src/components/VrxTree/VrxTree.mdx
@@ -213,6 +213,7 @@ interface IVrxTreeUseCase {
         <td>
             <ul>
                 <li>`value: VrxTreeNode`</li>
+                <li>`isChecked: boolean`</li>
             </ul>
         </td>
         <td>Event emitted when checking a node</td>
