VrxTree guide updated

--- a/src/components/VrxTree/VrxTree.mdx
+++ b/src/components/VrxTree/VrxTree.mdx
@@ -22,8 +22,10 @@ Here the list of the props that can be used to configure the tree:
 - `is-draggable` : boolean - If true, the tree will be draggable
 - `searchable` : boolean - If true, the tree will be searchable. An input will be displayed on top of the tree to search for nodes
 - `selectable` : boolean - If true, the tree will be selectable. The user will be able to select nodes via checkboxes
-- `returnUserData` : boolean - not implemented yet, probably will be removed
+- `toolbarClass` : string - The class to apply to the toolbar container
 
+VireoXtree has also the following slots:
+- `toolbar` : Slot to add a toolbar on top of the tree
 
 ## ⚙️ Configuration
 The configuration is a complex object that allows you to configure the tree in multiple aspects.
