--- a/src/components/VrxMenu/VrxMenu.mdx
+++ b/src/components/VrxMenu/VrxMenu.mdx
@@ -5,7 +5,7 @@ import {Meta} from "@storybook/blocks";
 # VireoXmenu
 
 VireoXmenu is a series of components that can be used to create a menu system for your web application.
-It is designed to be used with the component from VireoX library, but can also be used independently.
+It is designed to be used with the components from VireoX library, but can also be used independently.
 
 We have created a series of components that can be used to create a menu system for your web application.
 
