--- a/src/components/VrxTree/VrxTree.mdx
+++ b/src/components/VrxTree/VrxTree.mdx
@@ -40,6 +40,7 @@ type VrxTreeNode<T> = {
     icon: boolean,                              // [optional] node icon
     selected: boolean,                          // [optional] set the node as selected
     open: boolean,                              // [optional] set the node as open
+    disableDrag : boolean,                      // [optional] disable node drag
     userData: T,                              // [optional] optional user data
     asComponent: boolean,                       // [optional] if true, the node will be rendered as a component
     component: string | object,                 // [optional] An HTML tag name, a Component name or Component class reference.
