updated description and incremented version

--- a/src/components/VrxNotification/VrxNotification.mdx
+++ b/src/components/VrxNotification/VrxNotification.mdx
@@ -12,6 +12,8 @@ when the number is surpassed the notification will be placed in the overflow con
 
 Once there are less notifications than the maximum, a new notification from the overflow container will be displayed.
 
+There are two ways to close the notification, either by clicking on it or waiting out the duration.
+
 ```js
 
 <template>
