--- a/src/components/VrxProgress/VrxProgress.mdx
+++ b/src/components/VrxProgress/VrxProgress.mdx
@@ -10,7 +10,7 @@ To use it, import the component and use it as follows:
 ```js
 import {VrxProgress} from 'vireoxlibrary';
 
-<VrxProgress color={'default'}></VrxProgress>
+<VrxProgress size={'base'}></VrxProgress>
 ```
 
 For API's details and configuration please read the [documentation](./?path=/docs/vrxprogress--docs)
