--- a/src/components/VrxNode/VrxNode.mdx
+++ b/src/components/VrxNode/VrxNode.mdx
@@ -11,26 +11,32 @@ This component has only one job, assist the user in building an acceptable tree 
 A very basic example of the nodes in action is the following:
 
 ```ts
-    <div class="h-full w-full">
-        <VrxNode>
-          <template #content> <span class="dark:text-content-dark text-content-light"> Parent 1 </span> </template>
-          <VrxNode>
-            <VrxNode> <template #content> <span class="dark:text-content-dark text-content-light"> Child 1.1 </span> </template> </VrxNode>
-            <template #content> <span class="dark:text-content-dark text-content-light"> Child 1 </span> </template>
-            </VrxNode>
-          <VrxNode>
-            <template #content> <span class="dark:text-content-dark text-content-light"> Child 2 </span> </template>
+            <div class="h-full w-full">
             <VrxNode>
-              <template #content>
-                <div class="flex flex-row gap-1 items-center" @click.stop>
-                 <input type="checkbox"> <span class="dark:text-content-dark text-content-light"> Child 2.1 </span>
-                </div>
+              <span class="dark:text-content-dark text-content-light hover:bg-gray-700 hover:dark:bg-gray-400 w-full"> Parent 1 </span>
+              <template #children>
+                  <VrxNode>
+                    <span class="dark:text-content-dark text-content-light hover:bg-gray-700 hover:dark:bg-gray-400 w-full"> Child 1 </span>
+                    <template #children>
+                      <VrxNode> <span class="dark:text-content-dark text-content-light hover:bg-gray-700 hover:dark:bg-gray-400 w-full"> Child 1.1 </span> </VrxNode>
+                    </template>
+                    </VrxNode>
+                  <VrxNode>
+                    <span class="dark:text-content-dark text-content-light hover:bg-gray-700 hover:dark:bg-gray-400 w-full"> Child 2 </span>
+                  <template #children>
+                    <VrxNode>
+                        <div class="flex flex-row gap-1 items-center hover:bg-gray-700 hover:dark:bg-gray-400 w-full" @click.stop>
+                         <input type="checkbox"> <span class="dark:text-content-dark text-content-light"> Child 2.1 </span>
+                        </div>
+                        <template #children>
+                            <div class="flex flex-row items-center dark:text-content-dark text-content-light hover:bg-gray-700 hover:dark:bg-gray-400 w-full">
+                              <div> <input type="checkbox"> <span> Checkable </span> </div>
+                            </div>
+                        </template>
+                    </VrxNode>
+                  </template>
+                  </VrxNode>
               </template>
-            <div class="flex flex-row items-center">
-              <div> <input type="checkbox"> <span class="dark:text-content-dark text-content-light"> Checkable </span> </div>
-            </div>
             </VrxNode>
-          </VrxNode>
-        </VrxNode>
-    </div>
+            </div>
 ```
